node-backend-deployment.yaml
# node-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-backend
  template:
    metadata:
      labels:
        app: node-backend
    spec:
      containers:
      - name: node-backend-container
        image: hs-registry.kr.ncr.ntruss.com/node-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: node-backend-service
spec:
  selector:
    app: node-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
